--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
 	<div class="container">
 		<h1> TIC TAC TOE </h1>
+		<div class="score">
+			<h2> Human </h2>
+			<p id="finalScore"> <span>0</span> <span>&mdash;</span> <span>0</span> </p>
+			<h2> AI Player </h2>
+		</div>
 		<div class="controls">
 			<p> Select your symbol: </p>
 			<button class="symbolBtn selected">X</button>
