--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Tic Tac Toe</title>
 	<link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	<link href="styles/style.css" rel="stylesheet">
