scripts divided into files

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 		</div>
 	</div>
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="scripts/script.js"></script>
+	<script src="scripts/UIcontrols.js"></script>
+	<script src="scripts/gameClass.js"></script>
+	<script src="scripts/aiPlayer.js"></script>
 </body>
 </html>
