--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		<h1> TIC TAC TOE </h1>
 		<div class="score">
-			<h2> Human </h2>
+			<h2> You </h2>
 			<p id="finalScore"> <span>0</span> <span>&mdash;</span> <span>0</span> </p>
 			<h2> AI Player </h2>
 		</div>
